kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend 
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/svane20/simple-fortune-cookie-backend:1.0-e1d35a4f702ee03cdc9edba27aa5c7a6d9c1a64a
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 9000
          
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend-service
spec:
  selector:
    app: backend
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
